--- a/admin.html
+++ b/admin.html
@@ -18,16 +18,16 @@
     <div class="type__questions">
         <div class="question__typed">
             <h1>Enter the Question</h1>
-        <input type="text" class="ques" placeholder="Enter the question">
+        <input type="text" class="ques" placeholder="Enter the question" >
         </div>
     </div>
     <div class="choices">
-        <input type="text" id="choice1" placeholder="1st choice">
-        <input type="text" id="choice2" placeholder="2nd choice">
-        <input type="text" id="choice3" placeholder="3rd choice">
-        <input type="text" id="choice4" placeholder="4th choice">
+        <input type="text" id="choice1" placeholder="1st choice" >
+        <input type="text" id="choice2" placeholder="2nd choice" >
+        <input type="text" id="choice3" placeholder="3rd choice" >
+        <input type="text" id="choice4" placeholder="4th choice" >
         <input type="text" id="answer" placeholder="Answer key">
-        <button id="btn__upload" class="upload"><a href="index.html">Upload</a></button>
+        <button id="btn__upload" class="upload">Upload</button>
     </div>
 </body>
 <script src="admin-script.js"></script>
