--- a/index.html
+++ b/index.html
@@ -20,9 +20,13 @@
         <h1>Quiz Program</h1>
     </div>
     <div class="question__main">
-        <div class="questions"></div>
-        
-    </div>
+        <div class="questions">
+            
+
+        </div>
+        <button class="button"></button>
+
+            </div>
 </body>
 <script src="index-script.js"></script>
 </html>
